updating swagger doc and fixing negative quantity issue when adding products to cart
