# routes/cart.js
@@ -22,6 +22,8 @@ cartRouter.get('/', ensureCartExist, async (req, res, next) => {
     return res.status(200).send(items);
 });
 
+//TODO = refactor the non-negative total logic
+
 cartRouter.post('/', ensureCartExist, async (req, res, next) => {
     const {productId, quantity} = req.body;
     const user = req.user;
@@ -29,15 +31,21 @@ cartRouter.post('/', ensureCartExist, async (req, res, next) => {
     const productAlreadyInCart = await checkProductInCart(cart.id, productId);
     if(productAlreadyInCart){
         const newQuantity = parseInt(productAlreadyInCart.quantity) + parseInt(quantity);
+        if(newQuantity <= 0){
+            return res.status(422).send('total quantity must be greater than 0');
+        }
         await updateQuantity(newQuantity, productAlreadyInCart.id);
         return res.status(200).send('product added');
     }
-    const response = await addProductInCart(cart.id, productId, quantity);
+    if(quantity <= 0){
+        return res.status(422).send('quantity must be greater than 0');
+    }
+    await addProductInCart(cart.id, productId, quantity);
     return res.status(201).send('product added');
 });
 
 
-cartRouter.delete('/delete/:productId', ensureCartExist, async (req, res, next) => {
+cartRouter.delete('/:productId', ensureCartExist, async (req, res, next) => {
     const {productId} = req.params;
     const user = req.user;
     const cart = await getCart(user.id);
@@ -46,7 +54,8 @@ cartRouter.delete('/delete/:productId', ensureCartExist, async (req, res, next) 
         await deleteProduct(cart.id, productId);
         return res.status(200).send('product deleted');
     }
-    return res.redirect('/cart/showCart?error=no-product-to-delete');
+    return res.status(400).send('no product in cart matching this id');
+    //return res.redirect('/cart/showCart?error=no-product-to-delete');
 });
 
 
